fix: Use original args for original applet